# MarkditorApp

./: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
electron/main/utils/: directoryUtils.ts
shared/: file_filters.ts  platform_api.d.ts
src/: App.tsx  global.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: ListItem.tsx
src/feat/directory_panel/: DirectoryContextMenu.tsx  DirectoryItem.tsx  DirectoryPanel.tsx  DirectoryPanelHeader.tsx
src/feat/directory_panel/dialogs/: CreateDialog.tsx  DeleteDialog.tsx  RenameDialog.tsx
src/feat/editor/: BottomInfoBar.tsx  DocInfoRow.tsx  Editor.tsx  EditorContextMenu.tsx  UnsaveAlertDialog.tsx
src/feat/rich-editor/: Editor.tsx  style.css
src/feat/settings/: SelectLanguage.tsx  SettingDialog.tsx  SettingItem.tsx
src/feat/title_bar/: TitleBar.tsx  TitleBarDropdownMenus.tsx  TitleMenuItem.tsx  WindowActionButton.tsx  menu_items.tsx
src/feat/welcome/: Welcome.tsx
src/i18n/: en.json  i18n.ts  zh-CN.json
src/ipc/: tauri_api.ts
src/store/: dialog.ts  directory.ts  document.ts  editor.ts  preference.ts
src/types/: i18next.d.ts
src/utils/: hotkeys.ts  path.ts
