[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-invoke-http = { version = "2.0.0-rc.1" }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-cli = "2"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
